# Compensation-of-the-UAV-camera-motion

./: CMakeLists.txt  CameraMotionEstimation.cpp  KalmanFilter.cpp  KalmanFilter.h  README.md  test_app.cpp
include/: CameraMotionEstimation.h  KalmanFilter.h
src/: CameraMotionEstimation.cpp  KalmanFilter.cpp
